# hive-otel-trace-collector

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  Makefile  README.md  config.dual-export.yaml  config.example.logs.yaml  config.example.traces.yaml  config.example.yaml  config.kafka.yaml  config.logs-only.yaml  config.traces-only.yaml
.github/workflows/: cd.yml
src/: auth.rs  config.rs  lib.rs  main.rs
src/buffers/disk/: mod.rs
src/diskbuffer/: mod.rs  ring.rs
src/exporters/: initializer.rs  mod.rs
src/exporters/clickhouse/: batcher.rs  drain.rs  init.rs  mod.rs  pool.rs
src/exporters/kafka/: batcher.rs  client.rs  init.rs  message.rs  mod.rs  transform.rs
src/exporters/loki/: batcher.rs  client.rs  init.rs  mod.rs  transform.rs
src/metrics/: heap.rs  mem_limit.rs  mod.rs  pprof.rs  proc.rs
src/pipeline/: batcher.rs  clickhouse.rs  diskbuffer_drain.rs  mod.rs
src/processors/: logs.rs  mod.rs  traces.rs
src/proto/: mod.rs  otlp.rs  parse.rs  span.rs  transform.rs
src/receivers/: initializer.rs  mod.rs
src/receivers/otlp/: auth.rs  handler.rs  init.rs  mod.rs  transform.rs
src/receivers/vercel/: handler.rs  init.rs  log.rs  mod.rs  signature.rs
src/utils/: debug.rs  limits.rs  mod.rs  proc.rs
tests/: batcher_test.rs  diskbuffer_test.rs  e2e_test.rs  integration_test.rs  kafka_e2e_test.rs  loki_e2e_test.rs  parse_transform_test.rs
tests/common/: mod.rs
