[package]
name = "hive-otel-trace-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
url = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
moka = { version = "0.12", features = ["future"] }
tower-http = { version = "0.6", features = ["trace"] }
tonic = "0.14"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.14"
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace", "with-serde"] }
simd-json = "0.17"
clickhouse = { version = "0.14", features = ["lz4", "rustls-tls"] }
async-channel = "2"
memmap2 = "0.9"
bincode = "1"
crc32fast = "1"
prometheus = "0.14"
lazy_static = "1"
sysinfo = "0.35"
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
jemalloc_pprof = "0.8"
thiserror = "2"
serde_yaml = "0.9"
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.23.0"
tokio-test = "0.4"
wiremock = "0.6"
axum-test = "16"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["clickhouse"] }
portpicker = "0.1"
rand = "0.8"
libc = "0.2"
chrono = "0.4"
urlencoding = "2"
